crates/lean-rs-sys/tests/compile_fail/lean_object_not_constructible.stderr
error[E0451]: fields `_data` and `_marker` of struct `lean_object` are private
 --> tests/compile_fail/lean_object_not_constructible.rs:8:9
  |
7 |     let _obj = lean_rs_sys::lean_object {
  |                ------------------------ in this type
8 |         _data: [],
  |         ^^^^^ private field
9 |         _marker: core::marker::PhantomData,
  |         ^^^^^^^ private field
